Se hacen mas detalles y cambios en vistas en cuanto a colores

--- a/App_LUMINOVA/templates/admin/auditoria.html
+++ b/App_LUMINOVA/templates/admin/auditoria.html
@@ -9,10 +9,10 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>ID</th>
-            <th>Usuario</th>
-            <th>Acción</th>
-            <th>Fecha y Hora</th>
+            <th class="align-middle color-thead">ID</th>
+            <th class="align-middle color-thead">Usuario</th>
+            <th class="align-middle color-thead">Acción</th>
+            <th class="align-middle color-thead">Fecha y Hora</th>
         </tr>
     </thead>
     <tbody>
