--- a/App_LUMINOVA/templates/admin/usuarios.html
+++ b/App_LUMINOVA/templates/admin/usuarios.html
@@ -12,15 +12,15 @@
         </button>
     </div>
     <div class="table-responsive">
-        <table class="table table-striped table-bordered">
+        <table class="table table-striped">
             <thead class="table-light">
                 <tr>
-                    <th>Id</th>
-                    <th>Nombre de Usuario</th>
-                    <th>Email</th>
-                    <th>Rol</th>
-                    <th>Estado</th>
-                    <th>Acciones</th>
+                    <th class="align-middle color-thead">Id</th>
+                    <th class="align-middle color-thead">Nombre de Usuario</th>
+                    <th class="align-middle color-thead">Email</th>
+                    <th class="align-middle color-thead">Rol</th>
+                    <th class="align-middle color-thead">Estado</th>
+                    <th class="align-middle color-thead">Acciones</th>
                 </tr>
             </thead>
             <tbody>
