--- a/App_LUMINOVA/templates/deposito/insumo_editar.html
+++ b/App_LUMINOVA/templates/deposito/insumo_editar.html
@@ -26,8 +26,7 @@
 {% block content %}
 
     <div class="container mt-4">
-        <h2>Editar Insumo</h2>
-        <hr>
+        <h2 class="color-thead" style="height: 45px;">Editar Insumo</h2>
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
 
