--- a/App_LUMINOVA/templates/deposito/categoria_insumo_crear.html
+++ b/App_LUMINOVA/templates/deposito/categoria_insumo_crear.html
@@ -42,16 +42,15 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2>Crear Nueva Categoría de Insumo</h2>
-    <hr>
-    <form method="post" enctype="multipart/form-data"> 
+    <h2 class="color-thead" style="height: 45px;">Crear Nueva Categoría de Insumo</h2>
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <div class="mb-3">
             <label for="{{ form.nombre.id_for_label }}" class="form-label">{{ form.nombre.label }}</label>
             {{ form.nombre }}
             {% if form.nombre.errors %}<div class="invalid-feedback d-block">{{ form.nombre.errors }}</div>{% endif %}
         </div>
-        
+
         <div class="mb-3">
             <label for="{{ form.imagen.id_for_label }}" class="form-label">{{ form.imagen.label }}</label>
             {{ form.imagen }}
