--- a/App_LUMINOVA/templates/deposito/insumo_crear.html
+++ b/App_LUMINOVA/templates/deposito/insumo_crear.html
@@ -42,8 +42,7 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2>Agregar Nuevo Insumo</h2>
-    <hr>
+    <h2 class="color-thead" style="height: 45px;">Agregar Nuevo Insumo</h2>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
 
