--- a/App_LUMINOVA/templates/deposito/productoterminado_crear.html
+++ b/App_LUMINOVA/templates/deposito/productoterminado_crear.html
@@ -42,11 +42,10 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h2>Agregar Nuevo Producto Terminado</h2>
-    <hr>
+    <h2 class="color-thead" style="height: 45px;">Agregar Nuevo Producto Terminado</h2>
     <form method="post" enctype="multipart/form-data"> {# La action se infiere de la URL actual para CreateView #}
         {% csrf_token %}
-        
+
         {# Renderizar campos individualmente para mejor control o usar {{ form.as_p }} #}
         <div class="row">
             <div class="col-md-6 mb-3">
