--- a/App_LUMINOVA/templates/ventas/proveedores/proveedor_list.html
+++ b/App_LUMINOVA/templates/ventas/proveedores/proveedor_list.html
@@ -13,7 +13,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Lista de Proveedores</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
-        <a href="{% url 'App_LUMINOVA:proveedor_create' %}" class="btn btn-primary">
+        <a href="{% url 'App_LUMINOVA:proveedor_create' %}" class="btn btn-success">
             <i class="bi bi-plus-circle"></i> Agregar un proveedor
         </a>
     </div>
