--- a/App_LUMINOVA/templates/ventas/ventas_clientes.html
+++ b/App_LUMINOVA/templates/ventas/ventas_clientes.html
@@ -12,7 +12,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">{{ titulo_seccion|default:"Gestión de Clientes" }}</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#crearClienteModal">
+        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#crearClienteModal">
             <i class="bi bi-person-plus-fill"></i> Nuevo Cliente
         </button>
     </div>
