--- a/App_LUMINOVA/templates/ventas/ventas_lista_ov.html
+++ b/App_LUMINOVA/templates/ventas/ventas_lista_ov.html
@@ -13,7 +13,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">{{ titulo_seccion }}</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
-        <a href="{% url 'App_LUMINOVA:ventas_crear_ov' %}" class="btn btn-primary">
+        <a href="{% url 'App_LUMINOVA:ventas_crear_ov' %}" class="btn btn-success">
             <i class="bi bi-plus-circle"></i> Nueva Orden de Venta
         </a>
     </div>
